# syu

./: .gitignore  .pre-commit-ci.yaml  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  release-please-config.alpha.json  release-please-config.beta.json  release-please-config.json  syu.yaml
.devcontainer/: devcontainer.json  post-create.sh  setup-browser-tooling.sh
.github/: dependabot.yml  merge-queue-checks.json  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  deploy-pages.yml  export-app-dist-191.yml  merge-queue-reenroll.yml  merge-queue-watchdog.yml  release-artifacts.yml  release-please.yml
app/: .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.node.json
app/scripts/: build-wasm.mjs
app/src/: App.tsx  index.css  main.tsx  types.ts
app/tests/: browser-app.spec.ts
app/wasm/: Cargo.toml
app/wasm/src/: lib.rs
crates/syu-core/: Cargo.toml
docs/guide/: anti-patterns.md  app.md  command-card.md  concepts.md  lsp.md  (+14 more)
scripts/: generate-site-docs.py  install-precommit.sh  install-syu.sh
skills/: README.md
src/: cli.rs  config.rs  coverage.rs  inspect.rs  language.rs  lib.rs  main.rs  model.rs  report.rs  rules.rs  runtime.rs  workspace.rs
tests/: add_command.rs  app_command.rs  audit_command.rs  bootstrap_contributor_tooling_script.rs  browse_command.rs  check_command.rs  doctor_command.rs  duplicate_validation.rs  example_workspaces.rs  explain_command.rs  help_command.rs  init_command.rs  install_precommit_script.rs  list_command.rs  log_command.rs  lsp_tests.rs  main_binary.rs  merge_queue_reenroll_script.rs  merge_queue_watchdog_script.rs  orphan_validation.rs  reciprocal_validation.rs  relate_command.rs  report_command.rs  repository_quality.rs  search_command.rs  show_command.rs  sidecar_ownership_validation.rs  site_docs_generator.rs  spec_coverage_summary_script.rs  status_validation.rs  templates_command.rs  trace_command.rs  trace_coverage_validation.rs  validate_filter_command.rs  validate_fix_command.rs  validate_override_command.rs  workspace_discovery_command.rs
website/: docusaurus.config.js  package-lock.json  package.json  sidebars.js
(+258 files in other folders)
