[package]
name = "syu"
version = "0.0.1-alpha.5"
edition = "2024"
description = "Specification-driven development helper CLI"
license = "MIT"
readme = "README.md"
keywords = ["cli", "specification", "yaml", "testing", "traceability"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.50", features = ["derive"] }
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
syn = { version = "2.0.117", features = ["full"] }
tree-sitter = "0.26.7"
tree-sitter-typescript = "0.23.2"

[dev-dependencies]
assert_cmd = "2.1.1"
tempfile = "3.23.0"
