[package]
name = "syu"
version = "0.0.1-alpha.8"
edition = "2024"
rust-version = "1.88"
build = "build.rs"
description = "Specification-driven development helper CLI"
license = "MIT"
readme = "README.md"
keywords = ["cli", "specification", "yaml", "testing", "traceability"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0.100"
axum = "0.8.6"
clap = { version = "4.5.50", features = ["derive"] }
clap_complete = "4.5.60"
include_dir = "0.7.4"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
syu-core = { path = "crates/syu-core" }
syn = { version = "2.0.117", features = ["full"] }
tokio = { version = "1.51.1", features = ["macros", "net", "rt-multi-thread", "signal"] }
tree-sitter = "0.26.8"
tree-sitter-typescript = "0.23.2"
url = "2.5.7"

[dev-dependencies]
assert_cmd = "2.1.1"
libc = "0.2.184"
tempfile = "3.23.0"
tower = { version = "0.5.2", features = ["util"] }

[build-dependencies]
serde_json = "1.0.145"
